--- a/LSTM/LSTM.ipynb
+++ b/LSTM/LSTM.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3505abcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d97025d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "253ec626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "416bffc9",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +308,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "410ee900",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a695b7d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f889d2d0",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +360,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8af6143e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,13 +367,12 @@
     "    return df / df.iloc[0] - 1\n",
     "\n",
     "def normalise_min_max(df):\n",
-    "    return (df - df.min()) / (data.max() - df.min())"
+    "    return (df - df.min()) / (df.max() - df.min())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5408f018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c1ff51df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f243f802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +425,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "63aeaa39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +443,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "62151680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +453,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "493f8880",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +465,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6ecd645a",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +522,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e270469b",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +543,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "6408eb03",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +571,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "53a7b48a",
    "metadata": {},
    "outputs": [
     {
@@ -609,21 +591,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.10 64-bit ('tf_m1': conda)",
+   "name": "python3810jvsc74a57bd02074b219a3d1a23790571ecbf24b939e7c56498847a188cd9c9cdcf2165ab1ce"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": ""
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "2074b219a3d1a23790571ecbf24b939e7c56498847a188cd9c9cdcf2165ab1ce"
+   }
   }
  },
  "nbformat": 4,
